# Serie

./: .gitignore  README.md  download.sh  pyproject.toml  request.sh
configs/: config.json  config.py
configs/core/: agent.py
configs/misc/: download.json
configs/pipelines/: download.py  download_by_parsing.py  generate_index.py  request.py  request_cvpr_2023_then_translate.py  request_cvpr_2024_then_translate.py  request_cvpr_2025_then_translate.py  request_eccv_2018_then_translate.py  request_eccv_2020_then_translate.py  request_eccv_2022_then_translate.py  request_eccv_2024_then_translate.py  request_iccv_2023_then_translate.py  request_icml_2023_then_translate.py  request_icml_2024_then_translate.py  request_nips_2023_then_translate.py  request_nips_2024_then_translate.py  request_then_translate.py  request_wacv_2023_then_translate.py  request_wacv_2024_then_translate.py
configs/plugins/: arxiv_parser.py  cvf_parser.py  default_keywords_filter.py  index_generator.py  language_model_based_keywords_filter.py  openreview_parser.py  result_saver.py  translation.py
serie/: config.py  main.py
serie/base/: constants.py  paper.py  pipeline.py  plugin.py  result.py
serie/core/: agent.py  run.py
serie/pipelines/: download.py  download_by_parsing.py  generate_index.py  request.py  request_then_translate.py
serie/plugins/: __init__.py  arxiv_parser.py  cvf_parser.py  default_keywords_filter.py  downloader.py  eccv_parser.py  github_link_parser.py  index_generator.py  language_model_based_keywords_filter.py  markdown_table_maker.py  openreview_parser.py  result_loader.py  result_saver.py  translation.py
serie/utils/: io.py  misc.py  parser.py
