[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serie"
version = "0.0.1"
authors = [
    {name = "Yiqun Chen", email="chenyiqun2021@ia.ac.cn"},
]
description = "A Python library to download and manage papers of interest from arXiv, OpenReview, and other sources."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tqdm",
    "arxiv",
    "pyyaml",
    "openai",
    "wcwidth",
    "tabulate @ git+https://github.com/astanin/python-tabulate@master",
    "openreview-py",
    "beautifulsoup4",
    "html5lib",
    "bibtexparser"
]

[project.optional-dependencies]
build = ["build", "twine"]

[project.urls]
homepage = "https://github.com/yiqunchen1999/Serie"
repository = "https://github.com/yiqunchen1999/Serie"
documentation = "https://github.com/yiqunchen1999/Serie"

[tool.setuptools.packages.find]
exclude = ["assets*", "docs", "dist*", "playground*",
           "scripts*", "tests*", "./.cache", "./outputs", "./tmp", "./temp"]

[tool.wheel]
where = ["."]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.setuptools.package-data]
"serie" = ["py.typed"]

[tool.pyright]
include = ["serie", "eval"]
exclude = [".cache", "tests", "docs", "build", "dist", ".pytest_cache",
           ".git", ".github", ".ruff", "tmp"]
